--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.11",
+    "@mui/material": "^5.14.11",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-scripts": "^5.0.1",
-    "tar": "^6.1.15"
+    "tar": "^6.2.0"
   },
   "devDependencies": {
-    "typescript": "3.3.3"
+    "typescript": "5.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
